2009-02-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/read.t: Add a test for HRZ Slow scan TV.

	* magick/pixel_cache.c (ModifyCache): Set image 'taint' flag and
	clear monochrome and grayscale flags when pixels are accessed
	read/write rather than at sync.

	* coders/Makefile.am (MAGICK_CODER_SRCS): Add coders/hrz.c to
	build.

2009-01-27  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/hrz.c: New HRZ reader for slow scan TV.

2009-02-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resize.c (ResizeImage): Make error handling more robust.

	* magick/pixel_cache.c (SetNexus): Return a run-time error to
	invoking code rather than exiting the program if the pixel staging
	buffer fails to be allocated.

2009-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Allow the user to force the
	returned image to be TrueColor type for min-is-white and
	min-is-black TIFF files.  Previous to this, bilevel TIFF files
	were always returned as PseudoClass.

2009-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c, coders/pnm.c: Fix several race conditions
	reported by Julian Seward.
	(OpenCache): Restore conservative pre-allocation of pixel indexes
	since a glitch was encountered that needs to be resolved.

	* magick/{channel.c,compare.c,constitute.c,decorate.c,effect.c,fx.c,
	image.c,operator.c,pixel_iterator.c,render.c,resize.c,segment.c,
	shear.c,transform.c}: Use explicit OpenMP critical sections to
	avoid possible cross-contention.

	* coders/{dpx.c, pnm.c} Use explicit OpenMP critical sections to
	avoid possible cross-contention.

2009-01-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (OpenCache): Remove conservative
	pre-allocation of pixel indexes.

2009-01-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Reduce the amount of text on the front page.

2009-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
