@@ -24,6 +24,9 @@
 2009-02-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> VisualMagick/magick/magick_config.h.in: Provide configuration
+        access to the DisableSlowOpenMP define.
+
   <LI> PerlMagick/t/read.t: Add a test for HRZ Slow scan TV.
 
   <LI> magick/pixel_cache.c (ModifyCache): Set image 'taint' flag and
